--- a/lib/views/index.haml
+++ b/lib/views/index.haml
@@ -16,3 +16,5 @@
         %a{:href => "https://www.facebook.com/rawfunkmaharishi"}Facebook
         |
         %a{:href => "https://twitter.com/uncookedfunk"}Twitter
+
+<iframe width="100%" height="200" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/41994900&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
