--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,6 @@
     <![endif]-->
   </head>
   <body>
-    {% include header.html %}
     {% include navigation.html %}
 
     <div class="container">
@@ -27,6 +26,8 @@
 
       {{content}}
     </div>
+
+    {%include footer.html%}
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
