--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -1,3 +1,9 @@
-$bg-primary: #86cabc;
+$brand-primary: #86cabc;
+
+$gray-darker: #e25900;
+$gray-dark: #fd6400;
+$gray: #ffcba9;
+$gray-light: #fff0e6;
+$gray-lighter: #ffffff;
 
 $font-family-sans-serif: "Open Sans", sans-serif;
