--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,6 +1,2 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
- @font-face {
-  font-family: "Aller";
-  src: url("/assets/fonts/Aller_Rg.ttf");
-}
+@import url(http://fonts.googleapis.com/css?family=Neucha);
+$font-family-sans-serif: "Neucha", sans-serif;
