--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,3 @@
-<nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -12,22 +11,21 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav nav-tabs" rols="tablist">
         {% for item in site.data.navigation %}
           {% if item.children %}
             <li class="dropdown">
               <a href="{{item.path}}" class="dropdown-toggle" data-toggle="dropdown">{{item.title}} <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 {% for child in item.children %}
-                  {% include nav-item.html title=child.title path=child.path %}
+                  {% include nav-item.html title=child.title path=child.path current=page.url %}
                 {% endfor %}
               </ul>
             </li>
           {% else %}
-            {% include nav-item.html title=item.title path=item.path %}
+            {% include nav-item.html title=item.title path=item.path current=page.url %}
           {% endif %}
         {% endfor %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
-</nav>
