--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
-<div class='page-header'>
-<a href='/'><img src='/assets/logo.svg' /></a>
+<div class='header'>
+  <div class='container'>
+    <div class='col-md-12'>
+      <a href='/'><img src='/assets/logo.png' class='logo'/></a>
+    </div>
+  </div>
 </div>
