--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
     <![endif]-->
   </head>
   <body>
+    {% include header.html %}
     {% include navigation.html %}
 
     <div class="container">
