--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,7 +11,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
-      <ul class="nav nav-tabs" rols="tablist">
+      <ul class="nav nav-pills" rols="tablist">
         {% for item in site.data.navigation %}
           {% if item.children %}
             <li class="dropdown">
