--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,3 +1,4 @@
+<nav class="navbar" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -29,3 +30,4 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+</nav>
