--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class='header'>
   <div class='container'>
     <div class='col-md-12'>
-      <a href='/'><img src='/assets/logo.png' class='logo'/></a>
+      <a href='/'><img src='/assets/logo.png' alt='Raw Funk Maharishi' class='logo'/></a>
     </div>
   </div>
 </div>
