--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class='row'>
-  <div class="col-sm-6 col-md-4">
+  <div class="col-md-5">
 
     <dl class='dl-horizontal'>
 
@@ -25,10 +25,11 @@ layout: default
 
   </div>
 
-  <div class="col-sm-6 col-md-7">
-
-    <div class='map pull-right'>
-      {{ page.osm }}
+  <div class="col-md-7">
+    <div class='embed-responsive embed-responsive-16by9'>
+      <div class='map pull-right'>
+        {{ page.osm }}
+      </div>
     </div>
   </div>
 </div>
