--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,2 +1,2 @@
-@import url(http://fonts.googleapis.com/css?family=Neucha);
-$font-family-sans-serif: "Neucha", sans-serif;
+@import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
+$font-family-sans-serif: "Architects Daughter", sans-serif;
