--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -4,6 +4,9 @@ $brand-primary: #86cabc;
 $gray-darker: #e25900;
 $gray-dark: #fd6400;
 
-//$gray: #ffcba9;
-//$gray-light: #fff0e6;
-//$gray-lighter: #ffffff;
+$gray: #ffcba9;
+$gray-light: #fff0e6;
+$gray-lighter: #ffffff;
+
+$header-height: 100px;
+$footer-height: 40px;
