--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -26,8 +26,13 @@ layout: default
   </div>
 
   <div class="col-md-7">
-    <div class='embed-responsive embed-responsive-16by9'>
-      {{ page.osm }}
+    <div class='thumbnail'>
+      <div class='embed-responsive embed-responsive-16by9'>
+        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="{{page.osm_map}}"></iframe>
+      </div>
+      <div class='text-right'>
+        <small><a href='{{page.osm_link}}'>View larger map</a></small>
+      </div>
     </div>
   </div>
 </div>
