Tidy up loads of stuff

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class='col-md-12 text-center bottom'>
       |
       {% for link in site.data.links %}
-        <a href="{{link.url}}">{{link.title}}</a> |
+        <a href='{{link.url}}'>{{link.title}}</a> |
       {% endfor %}
     </div>
   </div>
