--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class='row'>
-  <div class="col-md-5">
+  <div class='col-md-5'>
 
     <dl class='dl-horizontal'>
 
@@ -25,10 +25,10 @@ layout: default
 
   </div>
 
-  <div class="col-md-7">
+  <div class='col-md-7'>
     <div class='thumbnail'>
       <div class='embed-responsive embed-responsive-16by9'>
-        <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="{{page.osm_map}}"></iframe>
+        <iframe frameborder='0' scrolling='no' marginheight='0' marginwidth='0' src='{{page.osm_map}}'></iframe>
       </div>
       <div class='text-right'>
         <small><a href='{{page.osm_link}}'>View larger map</a></small>
