--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,23 +1,23 @@
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
+<nav class='navbar navbar-default' role='navigation'>
+  <div class='container-fluid'>
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+    <div class='navbar-header'>
+      <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#navbar-collapse'>
+        <span class='sr-only'>Toggle navigation</span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
+        <span class='icon-bar'></span>
       </button>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse">
-      <ul class="nav nav-pills" role="tablist">
+    <div class='collapse navbar-collapse' id='navbar-collapse'>
+      <ul class='nav nav-pills' role='tablist'>
         {% for item in site.data.navigation %}
           {% if item.children %}
-            <li class="dropdown">
-              <a href="{{item.path}}" class="dropdown-toggle" data-toggle="dropdown">{{item.title}} <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
+            <li class='dropdown'>
+              <a href='{{item.path}}' class='dropdown-toggle' data-toggle='dropdown'>{{item.title}} <span class='caret'></span></a>
+              <ul class='dropdown-menu' role='menu'>
                 {% for child in item.children %}
                   {% include nav-item.html title=child.title path=child.path current=page.url %}
                 {% endfor %}
