--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,3 +1,4 @@
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
+@import url(http://fonts.googleapis.com/css?family=Jura);
 
-$font-family-sans-serif: "Architects Daughter", sans-serif;
+$font-family-sans-serif: "Jura", "Architects Daughter", sans-serif;
