--- a/_includes/sound.html
+++ b/_includes/sound.html
@@ -1,7 +1,7 @@
-<iframe class="embed-responsive-item"
-        width="100%"
-        height="450"
-        scrolling="no"
-        frameborder="no"
-        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{include.id}}&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false&amp;visual=true">
-        </iframe>
+<iframe class='embed-responsive-item'
+        width='100%'
+        height='450'
+        scrolling='no'
+        frameborder='no'
+        src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{include.id}}&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false&amp;visual=true'>
+</iframe>
