--- a/_includes/sound.html
+++ b/_includes/sound.html
@@ -1,7 +1,10 @@
+{% assign hide_related = 'true' %}
+{% assign show_user = 'false' %}
+{% assign visual = 'false' %}
+
 <iframe class='embed-responsive-item'
         width='100%'
-        height='450'
         scrolling='no'
         frameborder='no'
-        src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{include.id}}&amp;auto_play=false&amp;hide_related=true&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false&amp;visual=true'>
+        src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{include.id}}&amp;auto_play=false&amp;hide_related={{hide_related}}&amp;show_comments=true&amp;show_user={{show_user}}&amp;show_reposts=false&amp;visual=true'>
 </iframe>
