--- a/assets/application.scss
+++ b/assets/application.scss
@@ -65,6 +65,7 @@ $header-height: 100px;
   .logo {
     height: 85px;
     margin-bottom: $padding-large-vertical;
+    margin-left: -30px;
   }
 }
 
