Embiggen the texts

--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -4,8 +4,7 @@ layout: default
 
 <div class='row'>
   <div class='col-md-5'>
-
-    <dl class='dl-horizontal'>
+    <dl class='dl-horizontal gig'>
 
       <dt>Date<dt>
       <dd>{{ page.date | date_to_long_string }}</dd>
@@ -22,7 +21,6 @@ layout: default
       {% endif %}
 
     </dl>
-
   </div>
 
   <div class='col-md-7'>
