--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -26,7 +26,7 @@ layout: default
   <div class='col-md-7'>
     <div class='thumbnail'>
       <div class='embed-responsive embed-responsive-16by9'>
-        <iframe frameborder='0' scrolling='no' marginheight='0' marginwidth='0' src='{{ page.osm_map }}'></iframe>
+        <iframe src='{{ page.osm_map }}'></iframe>
       </div>
       <div class='text-right'>
         <small><a href='{{ page.osm_link }}'>View larger map</a></small>
