--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,4 +1,4 @@
 @import url(http://fonts.googleapis.com/css?family=Architects+Daughter);
-@import url(http://fonts.googleapis.com/css?family=Jura);
+@import url(http://fonts.googleapis.com/css?family=Dosis);
 
-$font-family-sans-serif: "Jura", "Architects Daughter", sans-serif;
+$font-family-sans-serif: "Dosis", "Architects Daughter", sans-serif;
