--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -17,7 +17,7 @@ layout: default
 
       {% if page.facebook_id %}
         <dt>More info</dt>
-        <dd><a href='https://facebook.com/events/{{ page.facebook_id }}/'>Facebook</a></dd>
+        <dd><a href='https://facebook.com/events/{{ page.facebook_id }}/' title='Facebook event'>Facebook</a></dd>
       {% endif %}
 
     </dl>
