--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -21,6 +21,7 @@
     {% include google-analytics.html %}
   </head>
   <body>
+    {% include navigation.html %}
     <div class='container'>
       <img src='/assets/images/banner.svg' class='center-block splash' />
     </div>
