--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,22 +1,14 @@
 <nav class='navbar navbar-default' role='navigation'>
   <div class='container-fluid'>
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class='navbar-header'>
-      <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#navbar-collapse'>
-        <span class='sr-only'>Toggle navigation</span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-        <span class='icon-bar'></span>
-      </button>
-    </div>
+    {% include mobile-nav.html %}
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class='collapse navbar-collapse' id='navbar-collapse'>
-      <ul class='nav nav-pills' role='tablist'>
+    <div class='collapse navbar-collapse transparent' id='navbar-collapse'>
+      <ul class='nav nav-stacked pull-right' role='tablist'>
         {% for item in site.data.navigation %}
           {% include nav-item.html title = item.title path = item.path current = page.url %}
         {% endfor %}
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+  </div>
 </nav>
