--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -22,8 +22,9 @@
   </head>
   <body>
     {% include navigation.html %}
+
     <div class='container'>
-      <img src='/assets/images/banner.svg' class='center-block splash' />
+        <img src='/assets/images/banner.png' class='splash center-block'/>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
