--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,18 @@
 <div class='header'>
   <div class='container'>
-    <div class='col-md-12'>
-      <a href='/'>
-        <img src='/assets/logo.png' alt='Raw Funk Maharishi' class='logo'/>
-      </a>
+    <div class='row'>
+      <div class='col-md-12'>
+        <a href='/'>
+          <img src='/assets/images/banner.png' alt='Raw Funk Maharishi' class='logo'/>
+        </a>
+      </div>
+    </div>
+    <div class='row'>
+      <div class='col-md-12 pull-right'>
+        <p>
+          Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
+        </p>
+      </div>
     </div>
   </div>
 </div>
