--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -21,7 +21,7 @@
     {% include google-analytics.html %}
   </head>
   <body>
-    {% include navigation.html %}
+    {% include navigation-splash.html %}
 
     <div class='container'>
         <img src='/assets/images/banner.png' class='splash center-block'/>
