--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,7 @@
     {% include navigation.html %}
 
     <div class='container'>
-      <h1>{{ page.title }}</h1>
-
+      <h1 class='text-center'>{{ page.title }}</h1>
       {{ content }}
     </div>
 
