--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -26,6 +26,7 @@
     <div class='container'>
         <img src='/assets/images/banner.png' class='splash center-block'/>
     </div>
+    {% include footer.html %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
