--- a/assets/application.scss
+++ b/assets/application.scss
@@ -35,6 +35,7 @@ body {
 
   margin-top: $padding-large-vertical;
   background: $gray-dark;
+opacity: 0.7;
   color: white;
   height: $footer-height;
 
