New song, better design

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,13 @@
 <div class='header'>
   <div class='container'>
     <div class='row'>
-      <div class='col-md-12'>
+      <div class='col-md-8 col-xs-12'>
         <a href='/'>
           <img src='/assets/images/banner.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
-    </div>
-    <div class='row'>
-      <div class='col-md-12 pull-right'>
-        <p>
-          Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
-        </p>
+      <div class='col-md-4 col-xs-12 pull-right'>
+        {% include navigation-splash.html %}
       </div>
     </div>
   </div>
