--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class='collapse navbar-collapse' id='navbar-collapse'>
-    <ul class='nav navbar-nav' role='tablist'>
+    <ul class='nav nav-stacked' role='tablist'>
       {% for item in site.data.navigation %}
         {% include nav-item.html title = item.title path = item.path current = page.url %}
       {% endfor %}
