--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     {% include header.html %}
-    {% include navigation.html %}
 
     <div class='container'>
+      <h1 class='text-center'>{{ page.title }}</h1>
       {{ content }}
     </div>
 
