--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -25,6 +25,14 @@
 
     <div class='container'>
         <img src='/assets/images/banner.png' class='splash center-block'/>
+        <div class='row'>
+          <div class='col-xs-0' 'col-md-4'></div>
+          <div class='col-xs-12' 'col-md-8'>
+            <p class='splash pull-right'>
+              Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
+          </p>
+        </div>
+      </div>
     </div>
     {% include footer.html %}
 
