--- a/assets/application.scss
+++ b/assets/application.scss
@@ -87,7 +87,8 @@ img.thumb {
     color: black;
   }
 
-  h4 {
+  p.splash {
+    color: white;
   }
 }
 
@@ -97,6 +98,8 @@ dl.gig {
 
 p {
   font-size: 1.5em;
+  color: white;
+  text-align: right;
 }
 
 .splash {
