--- a/_includes/sound.html
+++ b/_includes/sound.html
@@ -2,6 +2,12 @@
 {% assign show_user = 'false' %}
 {% assign visual = 'false' %}
 
+<div class='col-md-6'>
+  <div class='thumbnail'>
+    <div class='embed-responsive embed-responsive-4by3'>
 <iframe class='embed-responsive-item'
         src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ include.id }}&amp;auto_play=false&amp;hide_related={{ hide_related }}&amp;show_comments=true&amp;show_user={{ show_user }}&amp;show_reposts=false&amp;visual=true'>
 </iframe>
+</div>
+</div>
+</div>
