Excise redundant nav

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         </a>
       </div>
       <div class='col-md-4 col-xs-12 pull-right'>
-        {% include navigation-splash.html %}
+        {% include navigation.html %}
       </div>
     </div>
   </div>
