--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -23,7 +23,7 @@
   <body>
 
     <div class='container'>
-      {% include navigation-splash.html %}
+      {% include navigation.html %}
 
       <img src='/assets/images/banner.png' class='splash center-block'/>
       <div class='row'>
