--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -8,7 +8,6 @@
 
     <!-- Bootstrap -->
     <link rel='stylesheet' href='/assets/application.css' type='text/css' />
-    <link rel='stylesheet' href='/assets/splash.css' type='text/css' />
 
     <link rel='icon' type='image/png' href='/assets/favicon.ico' />
 
@@ -20,7 +19,7 @@
     <![endif]-->
     {% include google-analytics.html %}
   </head>
-  <body>
+  <body class='splash'>
 
     <div class='container'>
       {% include navigation.html %}
