--- a/assets/application.scss
+++ b/assets/application.scss
@@ -128,5 +128,7 @@ ul.nav {
   border: none;
 }
 
-.post {
+body.splash {
+  background-image: url('/assets/images/background.png');
+  background-position: center;
 }
