--- a/assets/application.scss
+++ b/assets/application.scss
@@ -132,3 +132,7 @@ body.splash {
   background-image: url('/assets/images/background.png');
   background-position: center;
 }
+
+.map {
+  max-height: 300px;
+}
