--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 <script src="http://openlayers.org/en/v3.0.0/build/ol.js" type="text/javascript"></script>
-
 <div class='row'>
   <div class='col-md-5'>
     <dl class='dl-horizontal gig'>
@@ -30,12 +29,12 @@ layout: default
         target: 'map',
         layers: [
           new ol.layer.Tile({
-            source: new ol.source.MapQuest({layer: 'sat'})
-          })
+            source: new ol.source.MapQuest({layer: 'osm'})
+          }),
         ],
         view: new ol.View({
           center: ol.proj.transform([{{ page.lat_long | join: ', '}}], 'EPSG:4326', 'EPSG:3857'),
-          zoom: 4
+          zoom: 17
         })
       });
     </script>
