--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -43,6 +43,9 @@ layout: default
 
           map.setCenter(position, zoom);
       </script>
+      <p class='pull-right'>
+        <a href='http://www.openstreetmap.org/?mlat={{ page.latitude }}&amp;mlon={{ page.longitude }}#map=17/{{ page.latitude }}/{{ page.longitude }}'>View larger map</a>
+      </p>
     </div>
   </div>
 </div>
