This could use some DRY, I'm pretty sure

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap -->
     <link rel='stylesheet' href='/assets/application.css' type='text/css' />
+    <link rel='stylesheet' href='/assets/splash.css' type='text/css' />
 
     <link rel='icon' type='image/png' href='/assets/favicon.ico' />
 
@@ -19,8 +20,7 @@
     <![endif]-->
     {% include google-analytics.html %}
   </head>
-  <body class='splash'>
-
+  <body>
     <div class='container'>
       {% include navigation.html %}
 
