--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -48,7 +48,7 @@ layout: default
           markers.addMarker(
             new OpenLayers.Marker(
               position,
-              new OpenLayers.Icon('http://www.openstreetmap.org/assets/marker-red-b8b47a812d7ea38509ac24368c689ba8.png')
+              new OpenLayers.Icon('http://www.openstreetmap.org/assets/marker-red-b8b47a812d7ea38509ac24368c689ba8.png', {w: 20, h:30})
             )
           );
 
