Colours are confusing

--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -1,13 +1,9 @@
-$brand-primary: #86cabc;
 $brand-primary: black;
 
-$gray-darker: #e25900;
-$gray-dark: #fd6400;
-$gray: #ffcba9;
-$gray-light: #fff0e6;
-$gray-lighter: #ffffff;
-
-$gray-lighter: #fd6400;
-$gray-dark: #86cabc;
+$gray-darker: #e25900; // Darker Orange
+$gray-dark: #86cabc;   // Our green
+$gray: #ffcba9;        // Light orange
+$gray-light: #fff0e6;  // Red
+$gray-lighter: #fd6400;// Orange
 
 $thumbnail-border: $gray;
