Content from page

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -29,7 +29,7 @@
         <div class='col-xs-0' 'col-md-4'></div>
         <div class='col-xs-12' 'col-md-8'>
           <p class='splash pull-right'>
-            Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
+            {{ content }}
           </p>
         </div>
       </div>
