--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class='row'>
       <div class='col-md-8 col-xs-12'>
         <a href='/'>
-          <img src='/assets/images/banner.png' alt='Raw Funk Maharishi' class='logo'/>
+          <img src='/assets/images/logos/banner.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
       <div class='col-md-4 col-xs-12 pull-right'>
