--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -27,6 +27,6 @@ layout: default
     </dl>
   </div>
   <div class='col-md-6'>
-    {% include map.html latitude = page.latitude, longitude = page.longitude %}
+    {% include map.html latitude = page.latitude longitude = page.longitude %}
   </div>
 </div>
