--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -24,12 +24,12 @@
     <div class='container'>
       {% include navigation.html %}
 
-      <img src='/assets/images/banner.png' class='splash center-block'/>
+      <img src='/assets/images/logos/banner.png' class='splash center-block'/>
       <div class='row'>
         <div class='col-xs-0' 'col-md-4'></div>
         <div class='col-xs-12' 'col-md-8'>
           <p class='splash pull-right'>
-            {{ content }}
+            Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams.
           </p>
         </div>
       </div>
