--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <div class='col-md-12 text-center bottom'>
       {% assign limit = site.data.links.size - 1 %}
       {% for link in site.data.links %}
-        <a href='{{ link.url }}'>{{ link.title }}</a>
+        <a href='{{ link.url }}' alt='{{ link.title }}' title='{{ link.title }}'><i class='fa {{ link.fontawesome }}'></i> {{ link.title }}</a>
         {% if forloop.rindex0 > 0 %}
           |
         {% endif %}
