--- a/_sass/fonts.scss
+++ b/_sass/fonts.scss
@@ -1,3 +1,4 @@
+@import url(http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
 @import url(http://fonts.googleapis.com/css?family=Dosis);
 
 $font-family-sans-serif: "Dosis", sans-serif;
