--- a/_layouts/gig.html
+++ b/_layouts/gig.html
@@ -3,7 +3,8 @@ layout: default
 ---
 <div class='row'>
   <div class='col-md-6'>
-    <dl class='dl-horizontal gig'>
+    <div class='gig'>
+      <dl class='dl-horizontal'>
 
       <dt>Date<dt>
       <dd>{{ page.date | date_to_long_string }}</dd>
@@ -26,6 +27,8 @@ layout: default
 
     </dl>
   </div>
+</div>
+
   <div class='col-md-6'>
     {% include map.html latitude = page.latitude longitude = page.longitude %}
   </div>
