--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,15 @@
 <div class='header'>
   <div class='container'>
     <div class='row'>
-      <div class='col-md-8 col-xs-1'>
+      <div class='col-md-8 hidden-xs'>
         <a href='/'>
           <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
-      <div class='col-md-4 col-xs-11 pull-right'>
+      <div class='col-xs-6 visible-xs mobile-logo'>
+        <img src='/assets/images/logos/square/logo.png' alt='Raw Funk Maharishi' class='logo'/>
+      </div>
+      <div class='col-md-4 pull-right'>
         {% include navigation.html %}
       </div>
     </div>
