Works from a phone up to a desktop. I think

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <div class='header'>
   <div class='container'>
     <div class='row'>
-      <div class='col-md-8 hidden-xs'>
+      <div class='col-md-8 hidden-xs hidden-sm'>
         <a href='/'>
           <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
-      <div class='col-xs-6 visible-xs mobile-logo'>
+      <div class='col-xs-6 visible-xs visible-sm mobile-logo'>
         <img src='/assets/images/logos/square/logo.png' alt='Raw Funk Maharishi' class='logo'/>
       </div>
       <div class='col-md-4 pull-right'>
