--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,9 @@
         </a>
       </div>
       <div class='col-xs-6 visible-xs visible-sm mobile-logo'>
-        <img src='/assets/images/logos/square/logo.png' alt='Raw Funk Maharishi' class='logo'/>
+        <a href='/'>
+          <img src='/assets/images/logos/square/logo.png' alt='Raw Funk Maharishi' class='logo'/>
+        </a>
       </div>
       <div class='col-md-4 pull-right'>
         {% include navigation.html %}
