--- a/assets/application.scss
+++ b/assets/application.scss
@@ -19,7 +19,7 @@ a {
 /* Sticky footer styles
 -------------------------------------------------- */
 
-$footer-height: 40px;
+$footer-height: 50px;
 
 html {
   position: relative;
@@ -166,4 +166,25 @@ p.splash{
 
 .mobile-logo {
   padding-top: $padding-large-vertical;
+}
+
+.vertical-text {
+    transform: rotate(-90deg);
+    transform-origin: right, top;
+    -ms-transform: rotate(-90deg);
+    -ms-transform-origin:right, top;
+    -webkit-transform: rotate(-90deg);
+    -webkit-transform-origin:right, top;
+    position: absolute;
+
+    color: #ed217c;
+}
+
+.attribution {
+  text-align: right;
+  font-size: 0.7em;
+  background: $rfm-orange;
+  a {
+    color: $rfm-green;
+  }
 }
