--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,11 @@
       {% endfor %}
     </div>
   </div>
+  <span class='attribution pull-right'>
+    Background image:
+    <a href='https://www.flickr.com/photos/thomashawk/9280743142/'>Sidewalks of New York</a>
+    by
+    <a href='https://www.flickr.com/photos/thomashawk/'>Thomas Hawk</a> - 
+    <a href='https://creativecommons.org/licenses/by-nc/2.0'>CC-BY-NC</a>
+  </span>
 </div>
