--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,6 +1,6 @@
 <iframe class='embed-responsive-item'
-        width="560"
-        height="315"
-        src="//www.youtube.com/embed/{{ include.id }}"
+        src='//player.vimeo.com/video/{{ include.id }}'
+        width='560'
+        height='315'
         allowfullscreen>
 </iframe>
