--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -1,7 +1,5 @@
-//$orange-darker:  #e25900;
 $rfm-green:      #86cabc;
-//$orange-lighter: #ffcba9;
-$rfm-orange:         #fd6400;
+$rfm-orange:     #fd6400;
 
 $gray-darker:  lighten(#000, 13.5%); // #222
 $gray-dark:    lighten(#000, 20%);   // #333
@@ -9,10 +7,5 @@ $gray:         lighten(#000, 33.5%); // #555
 $gray-light:   lighten(#000, 46.7%); // #777
 $gray-lighter: lighten(#000, 93.5%); // #eee
 
-$brand-primary: #86cabc;
-//$brand-success: #5cb85c;
-$brand-info:    #fd6400;
-//$brand-warning: #f0ad4e;
-//$brand-danger:  #d9534f;
-
-$gray-lighter: #fd6400;// Orange
+//$brand-primary: #86cabc;
+//$brand-info:    #fd6400;
