--- a/_includes/sound.html
+++ b/_includes/sound.html
@@ -2,7 +2,7 @@
 {% assign show_user = 'false' %}
 {% assign visual = 'false' %}
 
-<div class='col-md-6'>
+<div class='col-md-{{ include.width }}'>
   <div class='thumbnail'>
     <div class='embed-responsive embed-responsive-4by3'>
       <iframe class='embed-responsive-item'
