--- a/_sass/bootstrap-custom.scss
+++ b/_sass/bootstrap-custom.scss
@@ -1,11 +1,11 @@
-$rfm-green:      #86cabc;
-$rfm-orange:     #fd6400;
+$rfm-green:     #86cabc;
+$rfm-orange:    #fd6400;
 
-$gray-darker:  lighten(#000, 13.5%); // #222
-$gray-dark:    lighten(#000, 20%);   // #333
-$gray:         lighten(#000, 33.5%); // #555
-$gray-light:   lighten(#000, 46.7%); // #777
-$gray-lighter: lighten(#000, 93.5%); // #eee
+$gray-darker:   lighten(#000, 13.5%); // #222
+$gray-dark:     lighten(#000, 20%);   // #333
+$gray:          lighten(#000, 33.5%); // #555
+$gray-light:    lighten(#000, 46.7%); // #777
+$gray-lighter:  lighten(#000, 93.5%); // #eee
 
-//$brand-primary: #86cabc;
-//$brand-info:    #fd6400;
+$brand-primary: $rfm-green;
+$brand-info:    $rfm-orange;
