--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,7 @@
 
     <link rel='icon' type='image/png' href='/assets/favicon.ico' />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js'></script>
-      <script src='https://oss.maxcdn.com/respond/1.4.2/respond.min.js'></script>
-    <![endif]-->
+    {% include ie-boilerplate.html %}
     {% include google-analytics.html %}
   </head>
   <body>
