--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,12 +6,12 @@
           <img src='/assets/images/logos/wide/banner.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
-      <div class='col-xs-6 visible-xs visible-sm mobile-logo'>
+      <div class='col-xs-5 visible-xs visible-sm mobile-logo'>
         <a href='/'>
           <img src='/assets/images/logos/square/logo.png' alt='Raw Funk Maharishi' class='logo'/>
         </a>
       </div>
-      <div class='col-md-4 pull-right'>
+      <div class='col-md-4 col-xs-7 pull-right'>
         {% include navigation.html %}
       </div>
     </div>
