--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,23 +5,22 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <title>{{ page.title }}</title>
-
-    <!-- Bootstrap -->
     <link rel='stylesheet' href='/assets/application.css' type='text/css' />
-
+    <style>{{ page.extra_styles }}</style>
     <link rel='icon' type='image/png' href='/assets/favicon.ico' />
-
     {% include ie-boilerplate.html %}
     {% include google-analytics.html %}
   </head>
   <body>
-    {% include header.html %}
-
+    {% unless page.no_header %}
+      {% include header.html %}
+    {% endunless %}
     <div class='container'>
-      <h1 class='text-center'>{{ page.title }}</h1>
+      {% unless page.no_title %}
+        <h1 class='text-center'>{{ page.title }}</h1>
+      {% endunless %}
       {{ content }}
     </div>
-
     {% include footer.html %}
     {% include js-boilerplate.html %}
   </body>
